--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,4 +1,7 @@
 @forward "./home";
 @forward "./auth";
 @forward "./product-detail";
-@forward "./checkout"
+@forward "./checkout";
+@forward "./shipping";
+@forward "./payment";
+@forward "./favourite";
