Fix wrong relative path

--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -4239,17 +4239,17 @@
                             </div>
                             <div class="cart-dropdown-row cart-dropdown__products">
                                 <div class="cart-dropdown__product">
-                                    <img src="../assets/images/product/product-item-2.png" alt="" class="cart-dropdown__product-img">
+                                    <img src="./assets/images/product/product-item-2.png" alt="" class="cart-dropdown__product-img">
                                     <h5 class="cart-dropdown__product-heading">Lavazza Coffee Blends </h5>
                                     <p class="cart-dropdown__product-price">$329.00</p>
                                 </div>
                                 <div class="cart-dropdown__product">
-                                    <img src="../assets/images/product/product-item-1.png" alt="" class="cart-dropdown__product-img">
+                                    <img src="./assets/images/product/product-item-1.png" alt="" class="cart-dropdown__product-img">
                                     <h5 class="cart-dropdown__product-heading">Lavazza Coffee Blends </h5>
                                     <p class="cart-dropdown__product-price">$329.00</p>
                                 </div>
                                 <div class="cart-dropdown__product">
-                                    <img src="../assets/images/product/product-item-4.png" alt="" class="cart-dropdown__product-img">
+                                    <img src="./assets/images/product/product-item-4.png" alt="" class="cart-dropdown__product-img">
                                     <h5 class="cart-dropdown__product-heading">Lavazza Coffee Blends </h5>
                                     <p class="cart-dropdown__product-price">$329.00</p>
                                 </div>
